changes to review page

--- a/pages/review.html
+++ b/pages/review.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MAKFR - Review</title>
     <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/review.css">
 
     <!-- // CUSTOM -->
     <!-- <link rel="icon" href="favicon.ico" type="image/x-icon"> not in use yet --> 
@@ -105,7 +106,32 @@
                                         <button class="jobViewOptionItem"> Approvals </button>
                                     </div>
                                     <div id="jobView"> 
-                                        
+                                        <div id="candidatesList"> 
+                                            <div class="candiatesListItem"> 
+                                                <div class="candidateName"> Last Name, First Name </div>
+                                                <div class="candidateStatus"> 
+                                                    <div class="candiatesStatusTag" id="qualified"> Qualified </div> 
+                                                    <div class="candiatesStatusTag"> AI Screened </div> 
+                                                </div>
+                                                <div class="candidateEdit"> View </div>
+                                            </div>
+                                            <div class="candiatesListItem"> 
+                                                <div class="candidateName"> Last Name, First Name </div>
+                                                <div class="candidateStatus"> 
+                                                    <div class="candiatesStatusTag" id="notQualified"> Not Qualified </div> 
+                                                    <div class="candiatesStatusTag"> AI Screened </div> 
+                                                </div>
+                                                <div class="candidateEdit"> View </div>
+                                            </div>
+                                            <div class="candiatesListItem"> 
+                                                <div class="candidateName"> Last Name, First Name </div>
+                                                <div class="candidateStatus"> 
+                                                    <div class="candiatesStatusTag" id="reqReview"> Requesting Review </div> 
+                                                    <div class="candiatesStatusTag"> AI Screened </div> 
+                                                </div>
+                                                <div class="candidateEdit"> View </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
