new major changes

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MAKFR</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/login.css">
 
     <!-- // CUSTOM -->
     <!-- <link rel="icon" href="favicon.ico" type="image/x-icon"> not in use yet --> 
@@ -38,85 +40,24 @@
             <!-- Wrap Content -->
             <div id="inner-wrap"> 
                 <!-- Page --> 
-                <div id="page"> 
+                <div id="pageLogin"> 
                     <!-- Page Header -->
                     <div id="pageHeader"> </div>
                     <!-- Page CONTENT -->
-                    <div id="pageContent">
-                        <div id="newPage"> 
-                            <div class="pageNavBar"> 
-                                <div class="pageNavSearch"> Search </div>
-                                <div class="pageNavList">
-                                    <div class="pageNavItem"> 
-                                        <h4> Job Name </h4>
-                                        <p> DHRD </p>
-                                    </div>
-                                    <div class="pageNavItem"> 
-                                        <h4> Job Name 2 </h4>
-                                        <p> DHRD </p>
-                                    </div>
-                                </div>
+                    <div id="pageContentLogin">
+                        <div id="loginPage"> 
+                            <div id="loginHeader"> 
+                                <h1> Sign In </h1>
                             </div>
-                            <div class="pageCenter"> 
-                                <div class="pageCenterContent"> 
-                                    <div id="jobHeader">
-                                        <div id="jobHeaderArea"> 
-                                            <div id="jobHeaderInfo"> 
-                                                <h1 id="jobHeaderName"> Job Name </h1>
-                                                <p id="jobHeaderSub"> DHRD </p>
-                                            </div>
-                                            <div id="jobHeaderActions"> 
-                                                <button id="applyButton"> Apply </button>
-                                            </div>
-                                        </div>
-                                        <div id="jobHeaderMisc"> 
-                                            <div class="jobHeaderMiscItem"> 
-                                                <h4> Salary </h4>
-                                                <p> N/A </p>
-                                            </div>
-                                            <div class="jobHeaderMiscItem"> 
-                                                <h4> Location </h4>
-                                                <p> Oahu </p>
-                                            </div>
-                                            <div class="jobHeaderMiscItem"> 
-                                                <h4> Job Type </h4>
-                                                <p> Various </p>
-                                            </div>
-                                            <div class="jobHeaderMiscItem"> 
-                                                <h4> Job Number </h4>
-                                                <p> 01-0000 </p>
-                                            </div>
-                                            <div class="jobHeaderMiscItem"> 
-                                                <h4> Department </h4>
-                                                <p> DHRD </p>
-                                            </div>
-                                            <div class="jobHeaderMiscItem"> 
-                                                <h4> Opening Date </h4>
-                                                <p> XX/XX/XX </p>
-                                            </div>
-                                            <div class="jobHeaderMiscItem"> 
-                                                <h4> Closing Date </h4>
-                                                <p> Continuous </p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div id="jobViewOptions"> 
-                                        <button class="jobViewOptionItem" id="jobViewOptionItemSelected"> Description </button>
-                                        <button class="jobViewOptionItem"> Benefits </button>
-                                        <button class="jobViewOptionItem"> Questions </button>
-                                    </div>
-                                    <div id="jobView"> 
-                                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eleifend rutrum faucibus. Maecenas venenatis, ipsum non hendrerit dignissim, enim felis sagittis nisi, a laoreet ante lectus at lorem. Aliquam at egestas magna. Cras ornare, turpis et sagittis mattis, tellus arcu ultrices nibh, sed faucibus nulla leo in ipsum. Aliquam quis eros pretium, laoreet nunc eu, hendrerit lacus. Duis id viverra turpis. Sed ante est, dignissim ut dapibus nec, aliquet sed neque.
-
-Curabitur mi orci, congue at magna ac, congue tempus enim. Proin dictum scelerisque vulputate. Nunc venenatis dapibus ipsum in laoreet. Nulla sit amet porttitor elit, vel posuere libero. Donec pulvinar vestibulum semper. Nam vel ipsum id diam elementum faucibus. Praesent arcu purus, feugiat volutpat pharetra pharetra, tempus quis tellus. Etiam diam nibh, accumsan dapibus diam id, mattis faucibus urna. Aenean suscipit lobortis quam, quis condimentum ante. Aenean consectetur diam ac enim tristique commodo. Duis bibendum interdum iaculis. Ut bibendum, metus id accumsan tempor, dui ipsum venenatis ex, quis faucibus odio sem eget ante. Nulla in vehicula tellus, placerat lobortis purus. Nunc lobortis mi ac mauris venenatis, at hendrerit tellus consequat. Phasellus volutpat blandit sapien, quis congue libero porttitor ac. Curabitur eget ligula orci.
-
-Aliquam at sem sed mi mollis viverra in quis sapien. Sed vitae fermentum erat, sit amet molestie lacus. Pellentesque congue in erat at volutpat. Sed mauris quam, gravida ac quam ut, scelerisque pellentesque mauris. Fusce volutpat dapibus tristique. Nulla magna ipsum, malesuada eget lacus eget, tristique tristique nulla. Suspendisse metus magna, maximus sit amet leo non, porta porta odio.
-
-Sed iaculis, tortor nec varius iaculis, enim sapien pellentesque nisi, id egestas justo mauris quis turpis. Curabitur suscipit faucibus purus, eu lacinia orci consectetur eu. Nunc eleifend felis id sodales mattis. Fusce sit amet commodo ante. Nam consectetur dolor a ultrices tristique. Aenean dignissim augue purus, in posuere urna tincidunt nec. Aliquam vehicula velit tortor, in efficitur est rhoncus a. Pellentesque venenatis, velit ac condimentum facilisis, risus neque lobortis nisl, sed tempus purus tellus ac sapien. Aliquam erat volutpat. Cras pretium condimentum accumsan. Proin vel libero risus. Fusce vehicula mauris in tempus eleifend. Nam justo ex, tempor quis eleifend quis, aliquet a libero. Duis sem odio, pretium sed imperdiet nec, faucibus sit amet risus. Sed diam felis, gravida in blandit ac, tincidunt quis justo. In placerat metus nisl, quis feugiat lacus eleifend eu.
-
-Praesent a blandit erat. Duis blandit, enim convallis tincidunt consectetur, sem orci venenatis diam, non malesuada leo leo vitae est. Etiam lacinia scelerisque ligula, id facilisis ipsum porttitor in. Fusce sit amet suscipit tortor. Duis sed sapien vitae dolor cursus gravida ac eu mi. Ut commodo augue in felis pretium interdum. Nam posuere tempor tortor, quis vehicula nunc sodales eu. Sed arcu dolor, blandit eu varius nec, mattis vel augue. Etiam sem nisi, dictum sed tincidunt a, efficitur et ipsum. Praesent enim ipsum, placerat nec sem vitae, hendrerit maximus lectus. Integer vulputate lacus vel dignissim ornare. </p>
-                                    </div>
-                                </div>
+                            <div id="loginEntry">
+                                <input type="text" class="loginEntryField" name="loginUser" placeholder="username">
+                                <input type="text" class="loginEntryField" name="loginKey" placeholder="password">
+                                <p id="noError"> Error </p>
+                            </div>
+                            <div id="loginFooter">
+                                <button id="loginSubmit">
+                                    Sign In 
+                                </button>
                             </div>
                         </div>
                     </div> 
