--- a/pages/apply.html
+++ b/pages/apply.html
@@ -28,13 +28,14 @@
             <!-- Main Header -->
             <div class="sitewide-header"> 
                 <h1 id="sitewide-name"> MAKFR </h1>
-                <h3 id="sitewide-login"> Sign In </h3>
+                <h3 id="sitewide-login" onclick="signInPage()"> Sign In </h3>
             </div>
             <!-- Nav Header -->
             <div class="nav-header"> 
-                <button class="nav-button" id="nav-selected"> Apply </button>
-                <button class="nav-button"> Review </button>
+                <button class="nav-button" id="nav-selected" onclick="applyPage()"> Apply </button>
+                <button class="nav-button" onclick="reviewPage()"> Review </button>
             </div>
+            
             <!-- Wrap Content -->
             <div id="inner-wrap"> 
                 <!-- Page --> 
@@ -126,7 +127,7 @@ Praesent a blandit erat. Duis blandit, enim convallis tincidunt consectetur, sem
     </div>
 
     <!-- // Scripts -->
-    <!-- <script src="script.js"></script> not in use yet-->
+    <script src="../scripts/script.js"></script>
 </body>
 
 </html>
