--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 
     <!-- // Scripts -->
-    <script src="scripts/script.js"></script>
+    <script src="/scripts/script.js"></script>
 </body>
 
 </html>
